@@ -2,8 +2,8 @@
 mode con:cols=150 
 color 1B 
 TITLE Aion German - Game Server Console
-REM SET PATH="Type here your path to java jdk/jre (including bin folder)."
-REM NOTE: Remove tag REM from previous line.
+SET "JAVA_HOME=C:\Program Files\Eclipse Adoptium\jdk-25.0.3.9-hotspot"
+SET "PATH=%JAVA_HOME%\bin;%PATH%"
 :START
 CLS
 
@@ -15,7 +15,7 @@ echo.
 
 REM -------------------------------------
 REM Default parameters for a basic server.
-java -Xms512m -Xmx2048m -XX:MaxNewSize=24m -XX:NewSize=24m -XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -XX:+UseConcMarkSweepGC -XX:-UseSplitVerifier -ea -javaagent:./libs/al-commons.jar -cp ./libs/*;AL-Game.jar com.aionemu.gameserver.GameServer
+java -Xms512m -Xmx2048m --enable-preview -ea -javaagent:./libs/al-commons.jar -cp ./libs/*;AL-Game.jar com.aionemu.gameserver.GameServer
 REM -------------------------------------
 
 SET CLASSPATH=%OLDCLASSPATH%
