@@ -1,7 +1,7 @@
 @echo off
 TITLE Aion German - Game Server Console
-REM SET PATH="Type here your path to java jdk/jre (including bin folder)."
-REM NOTE: Remove tag REM from previous line.
+SET "JAVA_HOME=C:\Program Files\Eclipse Adoptium\jdk-25.0.3.9-hotspot"
+SET "PATH=%JAVA_HOME%\bin;%PATH%"
 :START
 CLS
 
@@ -13,7 +13,7 @@ echo.
 
 REM -------------------------------------  
 REM Default parameters for a basic server.
-java -Xms1280m -Xmx8192m -XX:MaxHeapSize=8192m -Xdebug -XX:MaxNewSize=24m -XX:NewSize=24m -XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -XX:+UseConcMarkSweepGC -XX:-UseSplitVerifier -ea -javaagent:./libs/al-commons.jar -cp ./libs/*;./libs/AL-Game.jar com.aionemu.gameserver.GameServer
+java -Xms1280m -Xmx8192m --enable-preview -ea -javaagent:./libs/al-commons.jar -cp ./libs/*;AL-Game.jar com.aionemu.gameserver.GameServer
 REM -------------------------------------
 SET CLASSPATH=%OLDCLASSPATH%
 
