@@ -1,8 +1,7 @@
 @ECHO off
 TITLE Aion German - Login Server Console
-REM SET PATH="C:\Program Files\Java\jre1.8.0_121\bin"
-REM SET PATH="Type here your path to java jdk/jre (including bin folder)."
-REM NOTE: Remove tag REM from previous line.
+SET "JAVA_HOME=C:\Program Files\Eclipse Adoptium\jdk-25.0.3.9-hotspot"
+SET "PATH=%JAVA_HOME%\bin;%PATH%"
 
 :start
 CLS
@@ -12,7 +11,7 @@ echo Starting Aion German Login Server.
 echo.
 REM -------------------------------------
 REM Default parameters for a basic server.
-java -Xms8m -Xmx32m -server -cp ./libs/*;AL-Login.jar com.aionemu.loginserver.LoginServer
+java -Xms8m -Xmx32m -server --enable-preview -cp ./libs/*;AL-Login.jar com.aionemu.loginserver.LoginServer
 REM
 REM -------------------------------------
 
